--- a/client/src/pages/order/OrderComplete.css
+++ b/client/src/pages/order/OrderComplete.css
@@ -1,33 +1,46 @@
-/* src/pages/order/OrderComplete.css */
-.order-complete-container {
-    width: 80%;
-    margin: auto;
-    text-align: center;
-    padding: 20px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-  }
-  
-  .order-complete-container h1 {
-    color: red;
-  }
-  
-  .order-complete-container p {
-    margin: 10px 0;
-    font-size: 1.2em;
-  }
-  
-  .order-complete-container button {
-    padding: 10px 20px;
-    background-color: #ff5722;
-    color: white;
-    border: none;
-    cursor: pointer;
-    font-size: 1.1em;
-    border-radius: 5px;
-  }
-  
-  .order-complete-container button:hover {
-    background-color: #e64a19;
-  }
-  
+.order-complete-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.order-complete-modal {
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
+  text-align: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.order-complete-modal h1 {
+  margin-bottom: 10px;
+  font-size: 30px;
+  font-weight: 500;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #b5b1b1;
+}
+
+.order-complete-modal p {
+  margin-bottom: 20px;
+  font-size: 20px;
+}
+
+.order-complete-modal button {
+  padding: 10px 20px;
+  background-color: #ff5722;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+.order-complete-modal button:hover {
+  background-color: #e64a19;
+}
