--- a/client/src/pages/productManage/productmanage.css
+++ b/client/src/pages/productManage/productmanage.css
@@ -8,6 +8,15 @@
     align-items: center;
     gap:10px;
 }
+.Product{
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    color:black;
+    margin-bottom: 200px;
+    position:relative;
+    min-height: 100%;
+}
 .th{
     padding: 15px;
     text-align: center;
@@ -19,11 +28,12 @@
 }
 .btn{
     padding: 10px 20px;
-    background-color: #ff5722;
+    background-color: #757575;
     color: #fff;
     border: 1px solid #000000;
     cursor: pointer;
     font-size: 14px;
+    width: 100%;
     
 }
 .form{
@@ -35,28 +45,19 @@
 .product-input{
     width:100%;
     padding: 10px;
-    border: 1px solid black;
-    border-radius: 5px;
-}
-.Product{
-        display: flex;
-        justify-content: center;
-        margin-top: 20px;
-        color:black;
-        margin-bottom: 200px;
-        position:relative;
-        min-height: 100%;
+    font-size: 15px;
+    border: none;
+    border-bottom: 1px solid #eee;
 }
 .tr{
     background-color: #fff;
     border: 1px solid #000000;
 }
 .product-container{
-    width: 100%;
+    width: 50%;
     margin: 0 auto;
     border-collapse: collapse;
-    background-color: #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background-color: #ffffff;
 }
 .product-table{
     width: 50%;
