--- a/client/src/pages/userManage/Modal.css
+++ b/client/src/pages/userManage/Modal.css
@@ -4,10 +4,7 @@
     margin-top: 5rem;
   }
   
-  .modal-open-button, .modal-close-btn {
-    cursor: pointer;
-    margin-left: auto;
-  }
+
   
   .modal-container {
     width: 100%;
@@ -18,13 +15,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: rgba(67, 63, 63, 0.5);
+    background: #757575
   }
   
   .modal-content {
     background-color: #ffffff;
-    width: 300px;
+    width: 360px;
     height: 500px;
-    padding: 15px;
-    border-radius: 10%;
+    padding: 40px;
   }
