--- a/client/src/component/search/search.css
+++ b/client/src/component/search/search.css
@@ -52,3 +52,24 @@
   margin-bottom: 10px;
   margin-right: 10px;
 }
+.search-box {
+  height: 25px;
+  width: 100%;
+  align-items: center;
+  border-bottom: 1px solid var(--c-lightgray);
+}
+.search-input {
+  width: 200px;
+  border: 1px solid black;   
+  padding: 3px 6px;
+  margin-right: 10px;
+  height: 30px;
+}
+.search-btn {
+  width: 40px;
+  cursor: pointer;
+  height: 30px;
+  border: 1px solid var(--c-darkgray);
+  box-shadow: 1px 1px 1px 1px var();
+  background-color: var(--c-lightgray);
+}
