--- a/client/src/pages/order/Order.css
+++ b/client/src/pages/order/Order.css
@@ -114,24 +114,43 @@ s
   justify-content: space-between;
   cursor: pointer;
   border-bottom: 1px solid #ddd;
-  font-size: 22px;
+  font-size: 20px;
 }
 
 .form-group {
-  font-size: 15px;
   display: flex;
-  flex-direction: column;
+  align-items: center;
   margin-bottom: 10px;
+  font-size: 13px;
+  border-bottom: #888;
 }
 
 .form-group label {
-  margin-bottom: 5px;
+  width: 150px; /* 레이블의 너비를 고정하여 일관된 간격을 유지 */
+  margin-right: 10px; /* 레이블과 인풋 간의 간격 설정 */
+  font-weight: 400;
 }
 
 .form-group input {
+  flex: 1;
   padding: 10px;
   border: 1px solid #ddd;
   border-radius: 5px;
+  font-size: 13px;
+}
+
+.orderer-info-button {
+  text-align: right; /* 텍스트와 버튼을 왼쪽으로 정렬 */
+  margin-bottom: 10px; /* 버튼 아래에 여백 추가 */
+}
+.orderer-info-button button {
+  padding: 0 12px;
+  line-height: 32px;
+  font-size: 11px;
+  color: #191919;
+  text-align: center;
+  background-color: #fff;
+  border: 1px solid #ccc;
 }
 
 .input-group {
@@ -141,7 +160,8 @@ s
 
 .apply-coupon-button {
   margin-left: 10px;
-  padding: 5px 10px;
+  padding: 8px 14px;
+  font-size: 18px;
   background-color: #ff5722;
   color: white;
   border: none;
@@ -154,11 +174,13 @@ s
 
 .next-button {
   margin-top: 20px;
-  padding: 5px 10px;
+  padding: 8px 14px;
+  font-size: 18px;
   background-color: #ff5722;
   color: white;
   border: none;
   cursor: pointer;
+
 }
 
 .next-button:hover {
