다시 관리자오더

--- a/client/src/pages/admin/dashboard/dashboard.css
+++ b/client/src/pages/admin/dashboard/dashboard.css
@@ -2,18 +2,16 @@
 
 .admin-dashboard-wrapper {
   display: flex;
-  background-color: var(--c-lightgray);
+  /* background-color: var(--c-lightgray); */
 }
 
 .dashboard-main-content {
   display: flex;
-  width: calc(100vw - 300px);
-  height: calc(100vh - 70px);
-  margin-left: 300px;
-  padding: 20px;
+  width: 100%;
+  height: 100%;
+  margin: auto;
   flex-wrap: wrap;
   justify-content: space-around;
-  /* background-color: var(--c-lightgray); */
 }
 
 /* 카드 1 */
