--- a/client/src/component/Navbar/navbar.css
+++ b/client/src/component/Navbar/navbar.css
@@ -6,6 +6,8 @@ nav {
   padding: 10px 20px;
   background-color: #ffffff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  position: relative;
+  z-index: 5; /* 헤더보다 낮은 값 설정 */
 }
 
 /* 로고 스타일 */
