--- a/client/src/component/Header/header.css
+++ b/client/src/component/Header/header.css
@@ -66,7 +66,7 @@
   background-color: #ffffff;
   border: 1px solid #ddd;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  z-index: 1050; /* 매우 높은 값으로 설정하여 다른 요소보다 앞에 나타나도록 */
+  z-index: 101; /* 네비게이션 바보다 높은 값 설정 */
   white-space: nowrap; /* 한 줄에 표시되도록 설정 */
 }
 
