--- a/client/src/pages/notice/Notice.css
+++ b/client/src/pages/notice/Notice.css
@@ -11,7 +11,7 @@
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
-    background-color: var(--c-lightgray);
+    background-color: #ffffff;
 
 }
 
