--- a/client/src/component/Header/header.css
+++ b/client/src/component/Header/header.css
@@ -6,7 +6,7 @@
   align-items: center;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   position: relative;
-  z-index: 100; /* 네비게이션 바보다 높은 값 설정 */
+  z-index: 100;
 }
 
 .header-top {
@@ -26,7 +26,7 @@
 .header-top-right {
   display: flex;
   align-items: center;
-  position: relative; /* 상대 위치 설정 */
+  position: relative;
 }
 
 .header-top-right a,
@@ -61,13 +61,13 @@
 
 .dropdown-menu {
   position: absolute;
-  top: 100%; /* 바로 아래에 나타나도록 설정 */
+  top: 100%;
   left: 0;
   background-color: #ffffff;
   border: 1px solid #ddd;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  z-index: 101; /* 네비게이션 바보다 높은 값 설정 */
-  white-space: nowrap; /* 한 줄에 표시되도록 설정 */
+  z-index: 1050;
+  white-space: nowrap;
 }
 
 .dropdown-menu a,
