--- a/client/src/pages/userManage/Modal.css
+++ b/client/src/pages/userManage/Modal.css
@@ -3,19 +3,19 @@
     justify-content: center;
     margin-top: 5rem;
   }
-  
-
-  
   .modal-container {
-    width: 100%;
-    height: 100%;
     position: fixed;
+    width: 100vw;
+    height: 100vh;
     top: 0;
     left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.6);
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #757575
+    z-index: 1001;
   }
   
   .modal-content {
