--- a/client/src/pages/product/subpage.css
+++ b/client/src/pages/product/subpage.css
@@ -177,7 +177,7 @@
 }
 
 .add-to-cart-button {
-  background-color: #007bff;
+  background-color:orangered;
   color: #fff;
   padding: 15px 30px;
   border: none;
@@ -210,4 +210,39 @@ a {
   margin-bottom: 20px; /* 여백 추가 */
   border-bottom: 2px solid #ddd; /* 밑줄 추가 */
   padding-bottom: 10px; /* 밑줄과의 간격 */
+}
+/* 모달 스타일 */
+.modal {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  text-align: center;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
