--- a/client/src/pages/customer/myqna.css
+++ b/client/src/pages/customer/myqna.css
@@ -179,7 +179,7 @@
 
   .myqna-submit-button {
     padding: 10px;
-    background-color: black;
+    background-color: #757575;
     color: white;
     border: none; 
     cursor: pointer;
