--- a/client/src/component/register/register.css
+++ b/client/src/component/register/register.css
@@ -7,6 +7,8 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    z-index: 9999;
+    top: 0;
 }
 
 .register-container {
