--- a/client/src/pages/review/ReviewWrite.css
+++ b/client/src/pages/review/ReviewWrite.css
@@ -20,6 +20,8 @@
   width: 100%;
   position: relative;
   height: auto;
+  max-height: 90vh; /* 화면 높이의 80%로 설정 */
+  overflow-y: auto; /* 스크롤 추가 */
 }
 
 .review-modal-close-button {
@@ -66,6 +68,7 @@
 }
 
 .modal-rating-stars {
+  display: flex;
   align-items: center;
 }
 
@@ -145,14 +148,14 @@
 
 .review-image-preview {
   position: relative;
-  width: 80px; /* 이미지 크기 설정 */
-  height: 80px; /* 이미지 크기 설정 */
+  width: 80px;
+  height: 80px;
 }
 
 .review-image-preview img {
-  width: 100%; /* 컨테이너에 맞게 조정 */
-  height: 100%; /* 컨테이너에 맞게 조정 */
-  object-fit: cover; /* 이미지 비율 유지 */
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   border: 1px solid #ddd;
   border-radius: 5px;
 }
@@ -161,10 +164,10 @@
   position: absolute;
   top: 5px;
   right: 5px;
-  background: white(255, 0, 0, 0.7);
+  background: white;
   color: black;
   cursor: pointer;
-  font-size: 13px;
+  font-size: 15px;
   width: 16px;
   height: 16px;
   border-radius: 50%;
@@ -181,8 +184,6 @@
   display: flex;
   justify-content: space-between;
 }
-
-
 
 .review-modal-cancel-button {
   background: #f0f0f0;
